fix alignments

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@ html {
 body {
   background-color: #f2f4f7;
   font-size: 1.2rem;
+  overflow-x: hidden;
 }
 
 * {
@@ -534,6 +535,10 @@ main section {
   max-width: 550px;
 }
 
+.max-text {
+  max-width: 342px;
+}
+
 .heading-2,
 .heading-3 {
   font-family: "Montserrat", sans-serif;
@@ -589,11 +594,11 @@ main section {
   justify-content: center;
   color: #fff;
   font-size: 0px;
-  width: 180px;
+  width: 230px;
   height: 100%;
   border-radius: 12px;
   position: absolute;
-  transition: all 0.3s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .carousel__item:nth-child(1) {
@@ -682,15 +687,14 @@ main section {
   padding: 3rem 0;
 }
 
-#subscribe-form,
-#subscribe-form-2 {
-  margin: 0 auto;
+.subscribe-form {
+  margin: 20px auto;
   max-width: 550px;
 }
 
 .email-input {
   width: 100%;
-  height: 45px;
+  height: 48px;
   border-radius: 8px;
   padding: 5px 30px;
   background-color: #e5eaff;
@@ -708,7 +712,7 @@ main section {
   font-size: 1.4rem;
   font-family: inherit;
   top: 50%;
-  right: 4px;
+  right: 1%;
   transform: translateY(-50%);
 }
 
@@ -801,7 +805,7 @@ main section {
   }
 
   .hero-img {
-    max-width: 85%;
+    max-width: 68%;
     transform: translateY(-50px) rotate(-11deg);
   }
 
